bug fix: search bar creating horizontal scroll in firefox

--- a/src/assets/scss/modules/_navigation.scss
+++ b/src/assets/scss/modules/_navigation.scss
@@ -249,6 +249,7 @@
   input {
     height: 2rem;
     margin-right: 0;
+    overflow: hidden;
     &[type='text'] {
       margin: 0;
     }
